@@ -56,6 +56,9 @@ BUGFIXES:
   "config -c" when client port is mentioned as separate and not like
   new style (Rakesh Kumar Singh via phunt)
 
+  ZOOKEEPER-2172: Cluster crashes when reconfig a new node as a participant
+  (Arshad Mohammad via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2505: Use shared library instead of static library in C
